--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -18,6 +18,7 @@ graphics/32_bits_framebuffer=true
 xr_features/xr_mode=0
 xr_features/degrees_of_freedom=0
 xr_features/hand_tracking=0
+xr_features/focus_awareness=false
 one_click_deploy/clear_previous_install=true
 custom_template/debug=""
 custom_template/release=""
@@ -200,43 +201,23 @@ permissions/write_user_dictionary=false
 
 [preset.1]
 
-name="Windows Desktop"
-platform="Windows Desktop"
+name="HTML5"
+platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../EXEs/A-MAZE-D.exe"
+export_path="build/web/index.html"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.1.options]
 
-texture_format/bptc=false
-texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
-texture_format/no_bptc_fallbacks=true
-binary_format/64_bits=true
-binary_format/embed_pck=false
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/custom_html_shell=""
+html/head_include=""
 custom_template/release=""
 custom_template/debug=""
-codesign/enable=false
-codesign/identity_type=0
-codesign/identity=""
-codesign/password=""
-codesign/timestamp=true
-codesign/timestamp_server_url=""
-codesign/digest_algorithm=1
-codesign/description=""
-codesign/custom_options=PoolStringArray(  )
-application/icon="res://UI/Images/Golem_Icon.ico"
-application/file_version=""
-application/product_version=""
-application/company_name=""
-application/product_name=""
-application/file_description=""
-application/copyright=""
-application/trademarks=""
