--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -206,7 +206,7 @@ platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.json, *.ttf"
 exclude_filter=""
 export_path="build/web/index.html"
 patch_list=PoolStringArray(  )
@@ -216,7 +216,7 @@ script_encryption_key=""
 [preset.1.options]
 
 vram_texture_compression/for_desktop=true
-vram_texture_compression/for_mobile=false
+vram_texture_compression/for_mobile=true
 html/custom_html_shell=""
 html/head_include=""
 custom_template/release=""
