--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -206,7 +206,7 @@ platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter="*.json, *.ttf"
+include_filter="*.json, *.ttf, *.import, *.tsx"
 exclude_filter=""
 export_path="build/web/index.html"
 patch_list=PoolStringArray(  )
